--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -21,7 +21,7 @@ max-width: 800px;
 
 }
 .testimonial-text{
-    background:#ff0058;
+    background:#a3506d;
     color: #fff;
     width: 100%;
     height: 350px;
